New manager and model classes added, along with new beans.

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,12 @@
         <maven.compiler.source>1.14</maven.compiler.source>
     </properties>
 
+
+<!--    <properties>-->
+<!--        <maven.compiler.target>1.13</maven.compiler.target>-->
+<!--        <maven.compiler.source>1.13</maven.compiler.source>-->
+<!--    </properties>-->
+
     <dependencies>
         <dependency>
             <groupId>org.springframework</groupId>
